git-svn-id: http://svn.vdombox.ru/flextools/trunk@2520 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -405,21 +405,28 @@
 	private function chengeSelectedLevelHandler(trEvt:TreeEditorEvent):void
 	{
 		/// if showing
+	
 		var level:String = trEvt.ID;
+		if(!massLines[level])
+			return;
+		
 		for(var fromObj:String in massLines[level])
 			for(var toObj:String in massLines[level][fromObj])
 			{
 				main.removeChild(massLines[level][fromObj][toObj]);
 				main.addChild(massLines[level][fromObj][toObj]);
+				
+				main.removeChild(masIndex[level][fromObj][toObj]);		
+				main.addChild(masIndex[level][fromObj][toObj]);
 			}
 			
-//				
+//			
+	/*
 		for(fromObj in massLines[level])
 			for( toObj in massLines[level][fromObj])
 			{
-				main.addChild(masIndex[level][fromObj][toObj]);		
-				main.addChild(masIndex[level][fromObj][toObj]);
-			}
+			} 
+			*/
 //			
 				
 		for (var ID:String in massTreeElements)
