--- a/IDE/Vdom/vdom/containers/Thumbnail.mxml
+++ b/IDE/Vdom/vdom/containers/Thumbnail.mxml
@@ -31,6 +31,9 @@
 				
 				super.data = value;
 				
+				if(!value)
+					return;
+				
 				labelValue = value.@Name;
 				
 				if(value.@IconID == '')
